--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,25 @@
 * {
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
-    
+    margin: 0;    
 }
 
 body {
     background-color: rgba(100, 3, 0, 0.8);
 }
 
+.carousel {
+    padding: 75px 0;
+}
 
 img {
     max-width: 100%;
     width: 100%;
-    height: 600px;
-    object-fit: cover;
+    max-height: calc(100vh - 150px);
+    object-fit: contain;
     object-position: 0 30%;
     border: 5px solid black;
     border-radius: 20px;
-}
-
-span {
-    cursor: pointer;
 }
 
 .item {
@@ -41,6 +39,7 @@ span {
     z-index: 999;
     font-size: 50px;    
     border-radius: 10px;
+    cursor: pointer;
     color: rgb(255, 0, 0);
     background-color: rgba(0, 0, 0, 0.205);
 }
