--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ body {
     display: block;
 }
 
-/* Contenitore thumbnails */
+/* THUMBNAILS */
 .container-thumb {
     position: fixed;
     bottom: 0;
@@ -60,7 +60,7 @@ body {
 
 #thumbnails {
     height: 120px;
-    background-color: yellowgreen;
+    background-color: rgb(23, 23, 23);
     overflow: hidden;    
     border: 5px solid;
 }
@@ -68,6 +68,14 @@ body {
 #thumbnails > .col {
     top: 50%;
 } 
+
+.thumb {
+    opacity: 0.6;
+}
+
+.active_thumb {
+    opacity: 1;
+}
 
 /* Buttons */
 .btn {
